Stream vehicle data to FE and made a beginning with showing it.
